--- a/pom.xml
+++ b/pom.xml
@@ -67,8 +67,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                org.example.se302_examscheduler/org.example.se302_examscheduler.HelloApplication
-                            </mainClass>
+                                org.example.se302_examscheduler.HelloApplication                            </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
